[gd_scene load_steps=14 format=3 uid="uid://bqjvl2384r77f"]

[ext_resource type="Script" path="res://Scripts/Enemigos/Bum.gd" id="1_njnlc"]
[ext_resource type="PackedScene" uid="uid://c0wjgvhp87sex" path="res://Componentes/GenerAyudas.tscn" id="2_7fxrw"]
[ext_resource type="PackedScene" uid="uid://fyyh6totk12a" path="res://Componentes/Salud.tscn" id="2_7w504"]
[ext_resource type="Texture2D" uid="uid://q367cv8ywqsc" path="res://Sprites/Enemigos/Bun.png" id="2_oe7r6"]
[ext_resource type="PackedScene" uid="uid://6wpanuw2c5wd" path="res://Componentes/ElementalState.tscn" id="5_bmhe3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_obhf7"]
radius = 16.0

[sub_resource type="Animation" id="Animation_6gsob"]
resource_name = "Empty"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 0, 0]
}

[sub_resource type="Animation" id="Animation_h5ace"]
resource_name = "Explode"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attackPlayer"
}]
}

[sub_resource type="Animation" id="Animation_kiem2"]
resource_name = "Full"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 1, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r8y8g"]
_data = {
"Empty": SubResource("Animation_6gsob"),
"Explode": SubResource("Animation_h5ace"),
"Full": SubResource("Animation_kiem2")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_7ydt5"]
radius = 105.224

[sub_resource type="CircleShape2D" id="CircleShape2D_jf8a7"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_j4u7k"]
radius = 24.0

[node name="ExplosiveEater" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 29
script = ExtResource("1_njnlc")

[node name="GenerAyudas" parent="." instance=ExtResource("2_7fxrw")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_obhf7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_oe7r6")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r8y8g")
}

[node name="VisionField" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 21

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionField"]
shape = SubResource("CircleShape2D_7ydt5")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_jf8a7")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_j4u7k")

[node name="Salud" parent="." instance=ExtResource("2_7w504")]
max_amount = 5

[node name="Knockback_timer" type="Timer" parent="."]
wait_time = 0.3

[node name="AttackSpawner" type="Node2D" parent="."]

[node name="ElementalState" parent="." instance=ExtResource("5_bmhe3")]

[connection signal="body_entered" from="VisionField" to="." method="_on_vision_field_body_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Knockback_timer" to="." method="_on_knockback_timer_timeout"]
[connection signal="temporal_damage" from="ElementalState" to="." method="_on_elemental_state_temporal_damage"]
